[package]
name = "pbrt4"
version = "0.1.0"
edition = "2021"
repository = "github.com/mxpv/pbrt4"
license = "Apache 2.0"
description = "Lightweight and fast PBRT v4 file parser"
categories = ["parsing", "rendering", "rendering::data-formats", "science"]
keywords = ["pbrt", "pbrt-v4", "ray-tracing"]

[dependencies]
thiserror = "1.0"
glam = "0.24"
