[package]
name = "pbrt4"
description = "Lightweight and fast PBRT v4 file parser"
version = "0.2.0"
edition = "2021"
repository = "https://github.com/mxpv/pbrt4"
license = "Apache-2.0"
categories = ["parsing", "rendering", "rendering::data-formats", "science"]
keywords = ["pbrt", "pbrt-v4", "ray-tracing"]

[dependencies]
thiserror = "1.0"
glam = "0.24"

[dev-dependencies]
tempdir = "0.3.7"
